<resources>
    <!-- Global -->
    <string name="app_name">TripFriend</string>

    <!-- Main Activity -->
    <string name="main_schedule_promote">Order your TripFriend</string>
    <string name="main_more_info_promote">More about TripFriend and your orders</string>

    <string name="main_button_schedule">Get Started</string>
    <string name="main_button_list_schedules">View your orders</string>
    <string name="main_button_about">Information about TripFriend</string>

    <string name="main_slider_content_1">Are you planning a trip to Prague and want to see not just the regular tourist destinations but the various local hotspots? We’ll help you with make your trip unforgettable!</string>
    <string name="main_slider_content_2">In Prague for the first time? Let us show you all the sights of this beautiful city. We want you to see the hidden gems!</string>
    <string name="main_slider_content_3">Do you want to make a cheap trip to Prague? We can make it possible.</string>
    <string name="main_slider_content_4">Are you curious about what´s going on in Prague the day of your arrival? Would you like to join the best parties, see exciting football match or visit breathtaking art exhibition? We satisfy all your aspirations!</string>

    <!-- Order -->
    <string name="order_heading">1/3 Order info</string>
    <string name="order_textView_location_desc">Location</string>
    <string name="order_textView_location_item">Select location</string>
    <string name="order_textView_language_desc">Language</string>
    <string name="order_textView_language_item">Select language</string>
    <string name="order_textView_timespan_desc">Time span</string>
    <string name="order_textView_timespan_item">Select time span</string>
    <string name="order_button_datepicker">Select date</string>
    <string name="order_button_timepicker">Select time</string>
    <string name="order_textView_preferences">Preferences</string>
    <string name="order_button_pick_friend">Find TripFriend</string>

    <string name="orderF_heading">2/3 Select Friend</string>
    <string name="orderF_button_order">Order your TripFriend</string>
    <!-- Order PickFriend -->

    <!-- Order User -->
    <string name="orderU_heading">3/3 Your information</string>
    <string name="orderU_name">Name</string>
    <string name="orderU_email">Email</string>
    <string name="orderU_phone">Phone number</string>
    <string name="orderU_group">Group</string>
    <string name="orderU_finish">Complete registration</string>
    <string name="orderU_pickup_location">Pickup location (Prague airport, Charles bridge, …)</string>
    <string name="orderU_notes">Notes</string>

    <!-- Order complete -->
    <string name="orderC_heading">Order complete</string>
    <string name="orderC_thank_you">Thank you!</string>
    <string name="orderC_email_notify">You will receive an email with the summarization of your order in a few minutes.</string>
    <string name="orderC_love">We\'re sure that with the help of TripFriend you\'ll fall in love with</string>
    <string name="orderC_goodbye">We look forward to seeing you soon!</string>
    <string name="orderC_finish_order">Finish order</string>

    <!-- List of schedules -->
    <string name="list_schedule_heading">Your schedules</string>
    <string name="list_schedule_location">Location:</string>
    <string name="list_schedule_language">Language:</string>
    <string name="list_schedule_date_time">Date:</string>
    <string name="list_schedule_pickup_location">Pickup location:</string>

    <string name="list_dialog_title">Enter email</string>
    <string name="list_dialog_heading">Please enter your email:</string>
    <string name="list_dialog_edit_text_hint">Email</string>

    <string name="list_schedule_change_email">Change your email</string>

    <!-- About -->
    <string name="about_heading">About TripFriend</string>
    <string name="about_what_we_offer">WHAT DO WE OFFER?</string>
    <string name="about_what">What?</string>
    <string name="about_what_content">Have you just arrived in a new city and need help? Do you know the local vibe – the mentality, language, tram schedule? Are you time limited, but still want to see the most amazing sights, interesting museums, beautiful parks, or the wildest clubs? Would you also like to keep your trip cheap? We are here to help you!</string>
    <string name="about_who">Who?</string>
    <string name="about_who_content">TripFriend makes your visit of Prague easier and more pleasant. We will provide you with a Friend who processes an excellent knowledge of the city and who will be there to satisfy any wish or expectation connected to your visit to this wonderful city. All of course, in your native language. We make your trip easier.</string>
    <string name="about_how">How?</string>
    <string name="about_how_content">You will choose, where and when will you be picked up by your TripFriend. You will choose if you want to spend your time exploring historical places, or visiting parks, local museums and the most modern shopping centres etc. You can expect TripFriend to recommend an extraordinary restaurant, good exchange, an energetic club and much more.</string>

    <string name="about_our_team">Our team</string>

</resources>
