<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tripfriend.front.order.OrderCompleteActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/orderC_thank_you"
        android:id="@+id/orderC_textView_thank_you"
        android:textColor="@color/textColorOrange"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="200dp"
        android:id="@+id/orderC_imageView_homie"
        android:src="@drawable/homie_with_transparent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/orderC_textView_thank_you"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_toRightOf="@id/orderC_imageView_homie"
        android:text="@string/orderC_email_notify"
        android:id="@+id/orderC_textView_email_notify"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:layout_below="@+id/orderC_textView_thank_you" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_toRightOf="@id/orderC_imageView_homie"
        android:id="@+id/orderC_textView_love"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:layout_below="@+id/orderC_textView_email_notify"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/orderC_goodbye"
        android:id="@+id/orderC_textView_goodbye"
        android:textColor="@color/textColorOrange"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/orderC_imageView_homie"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderC_finish_order"
        android:id="@+id/orderC_button_finish_order"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/orderC_textView_goodbye"/>

</RelativeLayout>
