<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.tripfriend.MainActivity">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/main_relativeLayout_slider">

            <ImageSwitcher
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/main_imageSwitcher_slider"
                android:animateFirstView="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextSwitcher
                android:id="@+id/main_textSwitcher_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#99000000"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

            <ImageButton
                style="@style/SliderButton"
                android:src="@drawable/ic_keyboard_arrow_left_white_24dp"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:id="@+id/main_button_slider_prev"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true" />

            <ImageButton
                style="@style/SliderButton"
                android:src="@drawable/ic_keyboard_arrow_right_white_24dp"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:id="@+id/main_button_slider_next"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:nestedScrollingEnabled="true" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_relativeLayout_slider"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:background="@color/colorAccent"
            android:id="@+id/main_linearLayout_order">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/main_schedule_promote"
                android:textStyle="bold"
                android:id="@+id/main_textView_schedule_promote"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorWhite"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_button_schedule"
                android:id="@+id/main_button_schedule"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="18dp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:background="@drawable/button_white"
                android:enabled="false" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_linearLayout_order"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorSuperLightGray"
            android:id="@+id/main_linearLayout_view_orders">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/main_more_info_promote"
                android:layout_marginTop="12dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:id="@+id/main_textView_more_info_promote"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:text="@string/main_button_list_schedules"
                android:id="@+id/main_button_list_schedules"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorBlack"
                android:background="@drawable/button_black"
                android:layout_gravity="center_horizontal"
                android:enabled="false" />

            <Button
                android:layout_marginTop="-2px"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:text="@string/main_button_about"
                android:id="@+id/main_button_about"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorBlack"
                android:background="@drawable/button_black"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>